--- a/.github/workflows/leech_ci.yml
+++ b/.github/workflows/leech_ci.yml
@@ -11,14 +11,14 @@ jobs:
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
-          sudo ./llvm.sh 18  # installs LLVM/Clang 18
+          sudo ./llvm.sh 18
           sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 100
           sudo update-alternatives --install /usr/bin/llvm-config llvm-config /usr/bin/llvm-config-18 100
           sudo update-alternatives --install /usr/bin/opt opt /usr/bin/opt-18 100
           sudo apt install cmake -y
 
-      - name: Verify Clang Version
+      - name: Verify LLVM/Clang Installation
         run: |
           clang --version
           opt --version
@@ -29,12 +29,13 @@ jobs:
           cd build
           cmake ../src
           make
+          ls -la inject_payload_pass.so  # Verify file exists explicitly
 
       - name: Compile infected target with LLVM Pass
         run: |
           cd build
           clang -flegacy-pass-manager \
-            -Xclang -load -Xclang ./inject_payload_pass.so \
+            -Xclang -load -Xclang $(pwd)/inject_payload_pass.so \
             ../src/infected_target.c -o infected_target
           chmod +x infected_target
           ./infected_target
