--- a/.github/workflows/leech_ci.yml
+++ b/.github/workflows/leech_ci.yml
@@ -7,29 +7,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install LLVM/Clang (official version)
+      - name: Install LLVM/Clang 18 and dev headers
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 18
+          sudo apt install -y llvm-18-dev clang-18 cmake
           sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 100
           sudo update-alternatives --install /usr/bin/llvm-config llvm-config /usr/bin/llvm-config-18 100
           sudo update-alternatives --install /usr/bin/opt opt /usr/bin/opt-18 100
-          sudo apt install cmake -y
 
       - name: Build LLVM Pass (.so from .cpp)
         run: |
           mkdir -p build
           cd build
-          cmake ../src
+          cmake -DLLVM_DIR=/usr/lib/llvm-18/lib/cmake/llvm ../src
           make
-
-      - name: Verify shared object exists (corrected path)
-        run: |
-          test -f build/inject_payload_pass.so && echo "Shared library compiled successfully" || \
-          test -f inject_payload_pass.so && echo "Shared library compiled successfully" || \
-          (echo "Compilation failed - shared library not found" && exit 1)
+          ls -l
 
       - name: Compile infected target with LLVM Pass
         run: |
