--- a/.github/workflows/leech_ci.yml
+++ b/.github/workflows/leech_ci.yml
@@ -1,4 +1,4 @@
-name: LLVM Leech CI Build
+name: LLVM Leech CI Debug
 on: [push]
 
 jobs:
@@ -18,19 +18,14 @@ jobs:
           sudo update-alternatives --install /usr/bin/llvm-config llvm-config /usr/bin/llvm-config-18 100
           sudo update-alternatives --install /usr/bin/opt opt /usr/bin/opt-18 100
 
-      - name: Build LLVM Pass (.so from .cpp)
+      - name: Find all LLVMConfig.cmake paths for LLVM_DIR debug
         run: |
-          mkdir -p build
-          cd build
-          cmake -DLLVM_DIR=/usr/lib/llvm-18/lib/cmake/llvm ../src
-          make
-          ls -l
-
-      - name: Compile infected target with LLVM Pass
-        run: |
-          cd build
-          clang -flegacy-pass-manager \
-            -Xclang -load -Xclang ./libinject_payload_pass.so \
-            ../src/infected_target.c -o infected_target
-          chmod +x infected_target
-          ./infected_target
+          echo "Searching for all LLVMConfig.cmake paths:"
+          find /usr -name LLVMConfig.cmake 2>/dev/null | tee /tmp/llvmconfig_found.txt
+          echo "-------"
+          echo "Now also searching system-wide, may take 1-2 mins:"
+          find / -name LLVMConfig.cmake 2>/dev/null | tee -a /tmp/llvmconfig_found.txt
+          echo "-------"
+          echo "Contents of /tmp/llvmconfig_found.txt for copy-paste:"
+          cat /tmp/llvmconfig_found.txt
+          exit 0  # Stop here so you can see the result in CI logs
